--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{site.baseurl}}/about/">About</a></li>
+        <li><a href="{{site.baseurl}}/privacy/">Privacy</a></li>
         <li><a href="{{site.baseurl}}/contact/">Contact</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Download <span class="caret"></span></a>
